done popup menu

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <button class="header__buttons--cart">
             <img src="./img/cart.png" alt="cart" />
           </button>
-          <button class="header__buttons--bars">
+          <button onclick="showMenu()" class="header__buttons--bars">
             <img src="./img/menu.png" alt="bars" />
           </button>
         </div>
@@ -32,7 +32,7 @@
             <button class="header__menu--button-cart">
               <img src="./img/dark__cart.png" alt="cart" />
             </button>
-            <button class="header__menu--button-bars">
+            <button onclick="showMenu()" class="header__menu--button-bars">
               <img src="./img/dark__menu.png" alt="bars" />
             </button>
           </div>
@@ -50,6 +50,7 @@
             <img src="./img/insta.png" alt="insta" />
             <img src="./img/facebook.png" alt="govno" />
           </div>
+          <div class="header__menu--fone"></div>
         </div>
       </div>
     </header>
