--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <img src="./img/insta.png" alt="insta" />
             <img src="./img/facebook.png" alt="govno" />
           </div>
-          <div class="header__menu--fone"></div>
+          <!-- <div class="header__menu--fone"></div> -->
         </div>
       </div>
     </header>
@@ -63,6 +63,27 @@
         </h1>
         <a class="main__link" href="#">УЗНАТЬ БОЛЬШЕ</a>
       </div>
+    </section>
+    <section class="categories">
+      <div class="container">
+        <h1 class="categories__title">Категории</h1>
+      </div>
+      <div class="categories__slider">
+        <div class="categories__slider--item item--1">
+          <img src="./img/catigiries-bike-offroad.png" alt="offroad bike" />
+          <span>offroad SERIES</span>
+        </div>
+        <div class="categories__slider--item item--2">
+          <img src="./img/catigiries-bike-road.png" alt="road bike" />
+          <span>ROAD SERIES</span>
+        </div>
+        <div class="categories__slider--item item--3">
+          <img src="./img/catigiries-bike-street.png" alt="street bike" />
+          <span>street SERIES</span>
+        </div>
+      </div>
+      <button class="button button__left"><</button>
+      <button class="button button__right">></button>
     </section>
     <script src="./js/scirpts.js"></script>
   </body>
